# simple-program-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  config_simple.json  launcher.pyw  launcher_simple_win.pyw  simple_program_launcher.txt
config/: default_config.json
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  usage.rs
crates/core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs  theme.rs
python_simple_windows/: README.md  launcher.pyw
scripts/: install_linux.sh  install_macos.sh  install_windows.ps1
