[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/ui",
    "crates/bin",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["rmanov"]
description = "Cross-platform program launcher triggered by simultaneous L+R mouse click"

[workspace.dependencies]
# GUI - immediate mode, fastest startup
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["glow", "wayland", "x11"] }

# Input - reads directly from /dev/input (works on Wayland + X11)
evdev = "0.12"
libc = "0.2"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Clipboard
arboard = "3.4"

# Math expression evaluation
meval = "0.2"

# Async (for file watching)
notify = "8.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
