[package]
name = "launcher-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for program launcher - config, usage tracking, platform data"

[dependencies]
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
chrono.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
notify.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
quick-xml = "0.37"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7"
