[package]
name = "launcher-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UI components for program launcher using egui"

[dependencies]
launcher-core = { path = "../core" }
egui.workspace = true
eframe.workspace = true
log.workspace = true
arboard.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
meval.workspace = true
directories.workspace = true
